# traider

./: .env.dist  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPING.md  Dockerfile  MCP_TODO.md  OPTIONS.md  PROVIDER_TODO.md  README.md  RISK.md  docker-compose.yml  pyproject.toml
docs/migrations/: qqq-660p-example.yaml
mcp_servers/: docker-compose.yml
mcp_servers/factor_connector/: Dockerfile  README.md
mcp_servers/fed_calendar_connector/: Dockerfile  README.md
mcp_servers/fred_connector/: Dockerfile  README.md
mcp_servers/news_connector/: AGENTS.md  Dockerfile  README.md  pyproject.toml
mcp_servers/news_connector/src/news_connector/: __init__.py  massive_client.py  server.py
mcp_servers/schwab_connector/: AGENTS.md  Dockerfile  README.md
mcp_servers/sec_edgar_connector/: AGENTS.md  Dockerfile  README.md  pyproject.toml
mcp_servers/sec_edgar_connector/src/sec_edgar_connector/: __init__.py  __main__.py  edgar_client.py  form13f_parser.py  form4_parser.py  server.py  ticker_map.py
mcp_servers/treasury_connector/: Dockerfile  README.md
mcp_servers/yahoo_connector/: AGENTS.md  Dockerfile
mcp_servers/yahoo_connector/src/yahoo_connector/: ta.py  yahoo_client.py
rules/: README.md  collectibles-tax-treatment.yaml  concurrent-factor-cap.yaml  core-thematic-hold.yaml  dry-powder-band.yaml  entries-no-chase.yaml  hedge-sleeve.yaml  holding-period-boundary.yaml  index-core-rebalance.yaml  leadership-cap.yaml  lot-method-verification.yaml  qualified-dividend-tax.yaml  risk-reward-rules.yaml  sizing-from-risk.yaml  speculative-cap.yaml  swing-trade.yaml  thematic-cap.yaml  treasury-etf-tax.yaml  wash-sale-window.yaml
scripts/: migrate_intents_v05.py
src/tos_connector/: schwab_client.py  server.py  ta.py
src/traider/: __init__.py  __main__.py  logging_utils.py  server.py  settings.py
src/traider/connectors/schwab/: ta.py
src/traider/connectors/yahoo/: ta.py
src/traider/providers/: __init__.py
src/traider/providers/earnings/: README.md  __init__.py  finnhub_client.py  tools.py
src/traider/providers/eia/: README.md  __init__.py  eia_client.py  tools.py
src/traider/providers/factor/: README.md  __init__.py  french_client.py  tools.py
todo/: PROVIDERS.md  QA.md
(+42 files in other folders)
