[project]
name = "traider"
version = "0.4.0"
description = "Unified read-only MCP server hub for AI-CLI-assisted trading insight"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "TA-Lib>=0.4.28",
    "yfinance>=0.2.40",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
    "PyYAML>=6.0",
]

[project.scripts]
traider = "traider.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/traider"]
