[project]
name = "news-connector"
version = "0.1.0"
description = "Read-only Massive news API connector exposed as an MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
news-connector = "news_connector.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_connector"]
