[project]
name = "sec-edgar-connector"
version = "0.1.0"
description = "Read-only SEC EDGAR connector exposed as an MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "lxml>=5.0",
    "python-dotenv>=1.0",
]

[project.scripts]
sec-edgar-connector = "sec_edgar_connector.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sec_edgar_connector"]
